# spoo-bot

./: .env.example  CODE_OF_CONDUCT.md  LICENSE  api.py  config.py  config.template.toml  config.toml  constants.py  main.py  pyproject.toml  requirements.txt  utils.py  utils_code.py
.github/workflows/: ci.yml  lint.yml
cogs/: getcode.py  shorten.py  stats.py
schemas/: __init__.py  base.py  exceptions.py  validators.py
schemas/models/: __init__.py  assets.py  bot.py  charts.py  commands.py  discord.py  server.py  ui.py  urls.py
