[project]
name = "spoobot"
version = "0.1.0"
description = "Official Discord bot for the Spoo.me community"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.14",
    "discord-py>=2.5.2",
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "py-spoo-url>=0.0.6",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "tomli>=2.2.1",
    "validators>=0.34.0",
]
